# AI-DD

./: .env.example  .gitignore  docker-compose.yml  init.sql  package-lock.json  package.json
.claude/: settings.local.json
apps/api/: .env.example  alembic.ini  celery_app.py  main.py  pyproject.toml  requirements.txt  run.py
apps/api/core/: config.py  database.py  security.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 001_initial_schema.py  002_token_blacklist.py  003_2fa_password_reset_gdpr.py  004_dms_versioning_search_tags.py  005_finance_module.py
apps/api/modules/agent/: base_agent.py  embeddings.py  finance_agent.py  legal_agent.py  models.py  orchestrator.py  planning_agent.py  router.py  schemas.py  tax_agent.py
apps/api/modules/audit/: middleware.py  models.py  router.py  schemas.py
apps/api/modules/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
apps/api/modules/dms/: models.py  router.py  schemas.py  storage.py
apps/api/modules/finance/: analysis.py  importer.py  models.py  router.py  schemas.py
apps/api/modules/knowledge/: models.py  router.py  schemas.py
apps/api/modules/ocr/: extractor.py
apps/api/modules/planning/: models.py  router.py  schemas.py  service.py
apps/api/modules/projects/: dependencies.py  models.py  router.py  schemas.py
apps/api/modules/report/: models.py  router.py  schemas.py
apps/api/modules/self_improvement/: models.py  router.py  schemas.py
apps/api/uploads/: 6a951241-65d4-4ab5-ad13-0654636df72a.txt  96f8badd-f52f-4f7e-887a-1a9ccac97739.txt  c29803dd-768a-416b-9bc8-7e6a2b999c1c.txt
apps/web/: index.html  package.json  tailwind.config.js
apps/web/src/: App.tsx  index.css
apps/web/src/api/: agents.ts  audit.ts  (+7 more)
docs/: SYSTEM_ARCHITECTURE.md
infrastructure/docker/: api.Dockerfile  web.Dockerfile
(+20 files in other folders)
